fixed the align items of the footer

--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -14,9 +14,8 @@
 .links__list--items {
   @include display_flex;
   align-items: center;
-
 }
-.icons__list--items li{
+.icons__list--items li {
   margin: 10px;
 }
 .links__list--items {
@@ -32,46 +31,42 @@
   text-decoration: none;
 }
 
-
 @media (min-width: $query-deskt) {
+  footer {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    height: 127px;
+  }
 
-footer {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  height: 127px;
-}
+  .white__feature--image {
+    order: 1;
+  }
 
-.white__feature--image {
-  order: 1;
-}
+  .links__list--items {
+    display: flex;
+    flex-direction: row;
+    padding-block-end: 12px;
+    order: 2;
+  }
 
-.links__list--items {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  order: 2;
-}
+  .icons__list--items {
+    display: flex;
+    flex-direction: row;
+    order: 3;
+  }
+  .links__list--items li {
+    margin-block-start: 16px;
+    margin-inline-end: 40px;
+  }
 
-.icons__list--items {
-  display: flex;
-  flex-direction: row;
-  order: 3;
-}
-.links__list--items li {
-  margin-block-start: 16px;
-  margin-inline-end: 40px;
-}
+  .links__list--items li a {
+    color: #ffffff;
+    text-decoration: none;
+  }
 
-.links__list--items li a {
-  color: #ffffff;
-  text-decoration: none;
-}
-
-.white__feature--image,
-.icons__list--items,
-.links__list--items {
-  padding-block-start: 3rem;
-}
-
+  .white__feature--image {
+    padding-block-start: 5px;
+  }
 }
